--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="main">
         <nav>
             <span><img width="53" src="assets/images/logo.svg" alt=""></span>
+             <span><img width="53" src="assets/images/bg" alt=""></span>
             <div>
                 <button class="btn">English</button>
                 <button class="btn btn-red-sm">Sign In</button>
